fix: Change default browser scrollbar in webkit to DFB, Codeblocks and Tables is breaking when overflow

--- a/src/shared/assets/globals.css
+++ b/src/shared/assets/globals.css
@@ -13,7 +13,7 @@
   }
 
   ::-webkit-scrollbar {
-    @apply w-[4px] bg-transparent;
+    @apply w-[4px] h-[4px] bg-transparent;
   }
 
   ::-webkit-scrollbar-thumb {
